--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="row align-items-center">
                                 <div class="col-6 col-lg-2 col-xl-2">
                                     <div class="logo">
-                                        <a href="/"><img src="img/logo/white-logo.png" alt="Logo"></a>
+                                        <a href="index.html"><img src="img/logo/white-logo.png" alt="Logo"></a>
                                     </div>
                                 </div>
                                 <div class="col-6 col-lg-10 col-xl-10">
